# dashi-image-server

./: .gitignore  Cargo.toml  flake.nix
crates/application/: Cargo.toml
crates/application/src/: usecase.rs
crates/domain/src/: repository.rs
crates/domain/src/value_object/: error.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: connection.rs
crates/infrastructure/src/connection/: object_strage.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: api.rs  handlers.rs  main.rs
crates/presentation/src/routes/: root.rs
