[workspace]
resolver = "2"
members = [
    "crates/presentation",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
]

[workspace.package]
name = "dashi-image-server"
version = "0.0.1"
edition = "2021"

[workspace.dependencies]
# axum
async-std = "1.13.0"
tokio = { version = "1.39.2", features = ["full"] }
axum = {version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
# .env
dotenvy = "0.15.7"
once_cell = "1.19.0"
# cloudflare r2
cf-r2-sdk = "0.2.2"
# error
thiserror = "2.0.11"
# logging
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
