[package]
name = "presentation"
version.workspace = true
edition.workspace = true

[dependencies]
# axum
async-std.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
# error
thiserror.workspace = true
# logging
tracing.workspace = true
tracing-subscriber.workspace = true
